Fixed scrollbar position

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ html, body {
   z-index: 98;
   color: white;
   max-height: 75%;
+  width: 70%;
   overflow-y: scroll;
 }
 
@@ -128,6 +129,7 @@ ol {
     padding-top: 3em;
     max-height: 100vh;
     height: 100vh;
+    width:100%;
   }
 
   .container {
